Bump Alpine to 3.5.0
Signed-off-by: nscuro <nscuro@protonmail.com>